Updated display text
rgb(0, 0, 0, 1.0) to rgba(0, 0, 0, 1.0)
and 
hsl(0, 0%, 0%, 1.0) to hsla(0, 0%, 0%, 1.0)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<div class="container">
 		<h2 class="mb-1">RGBA Color</h2>
 		<div class="wrapper">
-			<div class="result" id="rgbaColor">rgb(0, 0, 0, 1.0)</div>
+			<div class="result" id="rgbaColor">rgba(0, 0, 0, 1.0)</div>
 		</div>
 		<div class="wrapper mb-1">
 			<div class="content text-center">
@@ -172,7 +172,7 @@
 	<div class="container">
 		<h2 class="mb-1">HSLA Color</h2>
 		<div class="wrapper">
-			<div class="result" id="hslaColor">hsl(0, 0%, 0%, 1.0)</div>
+			<div class="result" id="hslaColor">hsla(0, 0%, 0%, 1.0)</div>
 		</div>
 		<div class="wrapper mb-1">
 			<div class="content text-center">
